--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
   "devDependencies": {
     "@remix-run/dev": "1.19.1",
     "@remix-run/eslint-config": "1.19.1",
-    "@shopify/eslint-plugin": "^42.0.1",
+    "@shopify/eslint-plugin": "^43.0.0",
     "@shopify/oxygen-workers-types": "^3.17.3",
     "@shopify/prettier-config": "^1.1.2",
     "@tailwindcss/forms": "^0.5.3",
@@ -51,11 +51,12 @@
     "@types/react-dom": "^18.2.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-hydrogen": "0.12.2",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.2.0",
-    "prettier": "^2.8.4",
+    "prettier": "^3.0.3",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
