--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "somedaysomehow_beer",
+  "name": "demo-store",
   "private": true,
   "sideEffects": false,
-  "version": "2.1.1",
+  "version": "2.1.3",
   "scripts": {
     "dev": "shopify hydrogen dev --codegen-unstable",
     "build": "shopify hydrogen build",
@@ -19,9 +19,9 @@
   "dependencies": {
     "@headlessui/react": "^1.7.2",
     "@remix-run/react": "1.19.1",
-    "@shopify/cli": "3.48.0",
-    "@shopify/cli-hydrogen": "^5.2.1",
-    "@shopify/hydrogen": "^2023.7.4",
+    "@shopify/cli": "3.49.2",
+    "@shopify/cli-hydrogen": "^5.4.0",
+    "@shopify/hydrogen": "^2023.7.9",
     "@shopify/remix-oxygen": "^1.1.3",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
@@ -34,29 +34,27 @@
     "react-use": "^17.4.0",
     "schema-dts": "^1.1.0",
     "tiny-invariant": "^1.2.0",
-    "typographic-base": "^1.0.4",
-    "worktop": "^0.7.3"
+    "typographic-base": "^1.0.4"
   },
   "devDependencies": {
     "@remix-run/dev": "1.19.1",
     "@remix-run/eslint-config": "1.19.1",
-    "@shopify/eslint-plugin": "^43.0.0",
+    "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^3.17.3",
     "@shopify/prettier-config": "^1.1.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
     "@types/eslint": "^8.4.10",
-    "@types/react": "^18.2.20",
+    "@types/react": "^18.2.22",
     "@types/react-dom": "^18.2.7",
     "cross-env": "^7.0.3",
     "eslint": "^8.20.0",
-    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-hydrogen": "0.12.2",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
     "postcss-preset-env": "^8.2.0",
-    "prettier": "^3.0.3",
+    "prettier": "^2.8.4",
     "rimraf": "^3.0.2",
     "tailwindcss": "^3.3.0",
     "typescript": "^5.2.2"
