--- a/package.json
+++ b/package.json
@@ -17,46 +17,47 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^1.7.2",
+    "@headlessui/react": "^1.7.17",
     "@remix-run/react": "1.19.1",
     "@shopify/cli": "3.49.2",
-    "@shopify/cli-hydrogen": "^5.4.0",
-    "@shopify/hydrogen": "^2023.7.9",
-    "@shopify/remix-oxygen": "^1.1.3",
+    "@shopify/cli-hydrogen": "^5.4.3",
+    "@shopify/hydrogen": "^2023.7.11",
+    "@shopify/remix-oxygen": "^1.1.7",
     "clsx": "^1.2.1",
     "cross-env": "^7.0.3",
-    "graphql": "^16.6.0",
+    "graphql": "^16.8.1",
     "graphql-tag": "^2.12.6",
-    "isbot": "^3.6.5",
+    "isbot": "^3.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.4.1",
+    "react-intersection-observer": "^9.5.2",
     "react-use": "^17.4.0",
-    "schema-dts": "^1.1.0",
-    "tiny-invariant": "^1.2.0",
+    "schema-dts": "^1.1.2",
+    "tiny-invariant": "^1.3.1",
     "typographic-base": "^1.0.4"
   },
   "devDependencies": {
     "@remix-run/dev": "1.19.1",
     "@remix-run/eslint-config": "1.19.1",
-    "@shopify/eslint-plugin": "^42.0.1",
+    "@shopify/eslint-plugin": "^42.1.0",
     "@shopify/oxygen-workers-types": "^3.17.3",
     "@shopify/prettier-config": "^1.1.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/typography": "^0.5.10",
     "@total-typescript/ts-reset": "^0.4.2",
-    "@types/eslint": "^8.4.10",
-    "@types/react": "^18.2.22",
-    "@types/react-dom": "^18.2.7",
+    "@types/eslint": "^8.44.4",
+    "@types/react": "^18.2.28",
+    "@types/react-dom": "^18.2.13",
     "cross-env": "^7.0.3",
-    "eslint": "^8.20.0",
+    "eslint": "^8.51.0",
     "eslint-plugin-hydrogen": "0.12.2",
-    "postcss": "^8.4.21",
+    "patch-package": "^8.0.0",
+    "postcss": "^8.4.31",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^8.2.0",
-    "prettier": "^2.8.4",
+    "postcss-preset-env": "^8.5.1",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2"
   },
   "engines": {
