--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "someday-somehow-website",
+  "name": "demo-store",
   "private": true,
   "sideEffects": false,
-  "version": "0.1",
+  "version": "2.1.6",
   "scripts": {
     "dev": "shopify hydrogen dev --codegen",
     "build": "shopify hydrogen build",
@@ -19,8 +19,8 @@
   ],
   "prettier": "@shopify/prettier-config",
   "dependencies": {
-    "@headlessui/react": "^1.7.18",
-    "@remix-run/react": "^2.6.0",
+    "@headlessui/react": "^1.7.2",
+    "@remix-run/react": "^2.5.1",
     "@remix-run/server-runtime": "^2.5.1",
     "@shopify/cli": "3.52.0",
     "@shopify/cli-hydrogen": "^7.0.0",
@@ -30,38 +30,38 @@
     "cross-env": "^7.0.3",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "isbot": "^3.8.0",
+    "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-intersection-observer": "^9.6.0",
-    "react-use": "^17.5.0",
-    "schema-dts": "^1.1.2",
-    "tiny-invariant": "^1.3.1",
+    "react-intersection-observer": "^9.4.1",
+    "react-use": "^17.4.0",
+    "schema-dts": "^1.1.0",
+    "tiny-invariant": "^1.2.0",
     "typographic-base": "^1.0.4"
   },
   "devDependencies": {
-    "@playwright/test": "^1.41.2",
-    "@remix-run/dev": "^2.6.0",
-    "@remix-run/eslint-config": "^2.6.0",
-    "@shopify/eslint-plugin": "^42.1.0",
+    "@playwright/test": "^1.40.1",
+    "@remix-run/dev": "^2.5.1",
+    "@remix-run/eslint-config": "^2.5.1",
+    "@shopify/eslint-plugin": "^42.0.1",
     "@shopify/oxygen-workers-types": "^4.0.0",
     "@shopify/prettier-config": "^1.1.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/typography": "^0.5.10",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "@total-typescript/ts-reset": "^0.4.2",
-    "@types/eslint": "^8.56.2",
-    "@types/react": "^18.2.51",
-    "@types/react-dom": "^18.2.18",
+    "@types/eslint": "^8.4.10",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "cross-env": "^7.0.3",
-    "eslint": "^8.56.0",
+    "eslint": "^8.20.0",
     "eslint-plugin-hydrogen": "0.12.2",
-    "postcss": "^8.4.33",
+    "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
-    "postcss-preset-env": "^8.5.1",
-    "prettier": "^2.8.8",
+    "postcss-preset-env": "^8.2.0",
+    "prettier": "^2.8.4",
     "rimraf": "^3.0.2",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5.2.2"
   },
   "engines": {
     "node": ">=18.0.0"
